fix(mobile): reduced logo size on mobile even more

--- a/css/main.css
+++ b/css/main.css
@@ -10279,7 +10279,7 @@ p {
   .app .top-nav {
     padding: 12px; }
   .app .logo {
-    width: 60px;
-    margin-top: 12px; }
+    width: 40px;
+    margin-top: 24px; }
   .app .footer .logo {
     width: 160px; } }
